--- a/x64/Release/aae.ini
+++ b/x64/Release/aae.ini
@@ -3,16 +3,16 @@
 [main]
 
 ;mame_rom_path = f:\mame\roms
-screenw =1024
-screenh =768
-widescreen = 0
+screenw = 1280
+screenh = 800
+widescreen = 0 ; No longer needed?
 windowed = 0
 force_vsync = 1 
 doublebuffer = 1               ;Enable Double buffering for a smoother display
 drawzero =0
 samplerate = 44100
-linewidth = 2.0                ;#Linewidth for Vector Games
-pointsize = 1.4                ;#PointSize for Vector Games
+linewidth = 2.2                ;#Linewidth for Vector Games
+pointsize = 1.5                ;#PointSize for Vector Games
 gamma =127   
 bright =127 
 contrast =127                   
@@ -62,14 +62,15 @@ mouse1b1 = 42           #NOT USED YET, DONT BOTHER
 
 
 ########### SOUND OPTIONS ###############
- 
-pshiss =0
-hvnoise =0
+
+hvnoise = 1
+pshiss = 0
 psnoise =0
 
-noisevol =19
-pokeyvol =19
-mainvol =18
+
+noisevol = 22 ;TODO, make this 3 seperate items.
+pokeyvol = 19
+mainvol = 18
 
 ###########################
 anisfilter = 0      #Enable  Filtering Disable for sharp textures
