--- a/x64/Release/video.ini
+++ b/x64/Release/video.ini
@@ -1433,3 +1433,40 @@ bezcropx=-130
 bezcropy=-30
 overalpha=.96
 
+[invaders]
+fullsx=175
+fullsy=1224
+fullex=1150
+fulley=0
+bezelsx=
+bezelsy=
+bezelex=
+bezeley=
+cropsx=
+cropsy=
+cropex=
+cropey=
+bezcropzoom=
+bezcropx=
+bezcropy=
+overalpha=
+
+[invaddlx]
+fullsx=175
+fullsy=1224
+fullex=1150
+fulley=0
+bezelsx=
+bezelsy=
+bezelex=
+bezeley=
+cropsx=
+cropsy=
+cropex=
+cropey=
+bezcropzoom=
+bezcropx=
+bezcropy=
+overalpha=
+
+
