--- a/x64/Release/video.ini
+++ b/x64/Release/video.ini
@@ -1469,4 +1469,27 @@ bezcropx=
 bezcropy=
 overalpha=
 
+;fullsx=20; left
+;fullsy=1000 ;right
+;fullex=-55 ;bottom
+;fulley=832 ; top
+
+[rallyx]
+fullsx=10
+fullsy=1210
+fullex=-380
+fulley=760
+bezelsx=
+bezelsy=
+bezelex=
+bezeley=
+cropsx=
+cropsy=
+cropex=
+cropey=
+bezcropzoom=
+bezcropx=
+bezcropy=
+overalpha=
+
 
