--- a/x64/Release/aae.ini
+++ b/x64/Release/aae.ini
@@ -1,12 +1,30 @@
 ;####AAE MAIN INI####
 
-[main]
+[window]
+fullscreen = 0                 ; 1 = fullscreen, 0 = windowed
+center = 1                     ; 1 = center the window on screen, 0 = top-left
+use_aspect = 1                 ; Create an aspect corrected full screen ish window.
+aspect_ratio = 4:3             ; aspect ratio (used in centered aspect window mode above)
+disable_nc = 0                 ; disable non-client rendering (Win10/11 border compensation)
+disable_rounded_corners = true ;(Win10/11 Rounded Corners)  
+width = 1152                   ; used only in classic window mode
+height = 864                   ; used only in classic window mode
+dpi_aware = true
+cursor_clip = 0                ; This is automatically handled in the current aae code. 
 
-;mame_rom_path = f:\mame\roms
-screenw = 1280
-screenh = 800
-widescreen = 0 ; No longer needed?
-windowed = 0
+[main]
+;mame_rom_path=f:\mame\roms
+screenw=1024                    ;No Longer Used
+screenh=768                     ;No Longer Used
+widescreen=0                    ;No Longer Used
+windowed=0
+hack = 1    		 	;Used right now just for tempest level select unlock
+bezel = 0
+artwork = 1 
+artcrop = 1
+overlay=1
+snappng = 1                    
+dotmask = 0   
 force_vsync = 1 
 doublebuffer = 1               ;Enable Double buffering for a smoother display
 drawzero =0
@@ -22,16 +40,15 @@ fire_point_size = 20           ;#ASTEROIDS AND ASTEROIDS DELUXE
 explode_point_size = 17        ;#ASTEROIDS AND ASTEROIDS DELUXE
 debug = 0
 kbleds =1
-debug_profile_code = 0         ;Enable this for verbose logging (debugging and profiling)
-audio_force_resample = 0;      ;Force resampling of all samples to the selected samplerate
-
-;##### ARTWORK OPTIONS ############
-bezel  = 0
-artwork = 1 
-artcrop = 1
-overlay = 1
-snappng = 1                    #PNG or BMP snapshots
-dotmask = 0                    #RASTER MONITOR SCREEN EFFECTS - (NOT FINISHED, SLOW AT HI RES)
+debug_profile_code = 0        ;Enable this for verbose logging (debugging and profiling)
+audio_force_resample = 0      ;Force resampling of all samples to the selected samplerate
+; --- Performance Settings ---
+; Process priority: 0=IDLE, 1=NORMAL, 2=ABOVE_NORMAL, 3=HIGH, 4=REALTIME (not recommended)
+priority=2
+; Boost main game thread priority slightly above normal
+; 1 = enable, 0 = disable
+boostThread=1
+                 
 
 ;########### GAME SPECIFIC HACKS ################
 sstick = 1                     #Battlezone Single Stick Hack
@@ -43,14 +60,13 @@ ksnap = 58              #Snapshot Key
 klstate = 53 #F7        #Only currently working in asteroids (sorry!)
 ksstate = 54 #F8        #Only currently working in asteroids (sorry!)
 ktest = 48              #Activate test Menu - Works for most games
-ksfps = 56              #Show frames per second
 kmenu = 64
 
 ########## Trackball / Spinner  #########
 
 mouse1xs =2
 mouse1ys =2
-mouse2xs = 3            #mouse sensitivity, in mickeys. 3 is EXACT for tempest-with an oscar spinner
+mouse2xs = 3            #mouse sensitivity, in mickeys. 
 mouse2ys = 3            #mouse sensitivity, in mickeys.
 mouse1x_invert =0
 mouse1y_invert =0
@@ -58,24 +74,23 @@ mouse1b1 = 41           #NOT USED YET, DONT BOTHER
 mouse1b1 = 42           #NOT USED YET, DONT BOTHER
 
 ########## JOYSTICK ###############
-
+;TBD
 
 
 ########### SOUND OPTIONS ###############
 
-hvnoise = 1
+hvnoise = 0
 pshiss = 0
-psnoise =0
+psnoise = 0
 
 
-noisevol = 22 ;TODO, make this 3 seperate items.
+noisevol = 20 ;TODO, make this 3 seperate items.
 pokeyvol = 19
 mainvol = 18
 
 ###########################
 anisfilter = 0      #Enable  Filtering Disable for sharp textures
 prescale = 2        #Raster Prescale value
-priority = 1
 snappng = 0
 vectorglow = 6
 vectortrail = 0
@@ -87,4 +102,4 @@ screenburn = 0
 
 
 [mouse]
-mouse_accel_factor = 0
+mouse_accel_factor = 2
