--- a/aae/aae.vcxproj
+++ b/aae/aae.vcxproj
@@ -118,7 +118,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_WINDOWS;GLEW_STATIC;_DISABLE_CONSTEXPR_MUTEX_CONSTRUCTOR;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;_WINDOWS;GLEW_STATIC;_DISABLE_CONSTEXPR_MUTEX_CONSTRUCTOR;WIN7BUILD;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
@@ -220,15 +220,16 @@
     <ClInclude Include="system\3rdparty\stb_image.h" />
     <ClInclude Include="system\3rdparty\stb_image_write.h" />
     <ClInclude Include="system\3rdparty\wglew.h" />
-    <ClInclude Include="system\audio\dbvolume.h" />
     <ClInclude Include="system\audio\emptywav.h" />
     <ClInclude Include="system\audio\error_wav.h" />
     <ClInclude Include="system\audio\helper_functions.h" />
     <ClInclude Include="system\audio\mixer.h" />
+    <ClInclude Include="system\audio\mixer_volume.h" />
     <ClInclude Include="system\audio\stb.h" />
     <ClInclude Include="system\audio\wav_file.h" />
     <ClInclude Include="system\audio\wav_filters.h" />
     <ClInclude Include="system\audio\wav_resample.h" />
+    <ClInclude Include="system\audio\wav_sweep.h" />
     <ClInclude Include="system\audio\XAudio2Stream.h" />
     <ClInclude Include="system\font\bmfont.h" />
     <ClInclude Include="system\graphics\colordefs.h" />
@@ -254,6 +255,7 @@
     <ClInclude Include="system\util\allegro_timer.h" />
     <ClInclude Include="system\util\anim_timer.h" />
     <ClInclude Include="system\util\collision_tests.h" />
+    <ClInclude Include="system\util\FrameLimiter.h" />
     <ClInclude Include="system\util\hotspot.h" />
     <ClInclude Include="system\util\iniFile.h" />
     <ClInclude Include="system\util\path_helper.h" />
@@ -346,6 +348,7 @@
     <ClCompile Include="system\audio\wav_file.cpp" />
     <ClCompile Include="system\audio\wav_filters.cpp" />
     <ClCompile Include="system\audio\wav_resample.cpp" />
+    <ClCompile Include="system\audio\wav_sweep.cpp" />
     <ClCompile Include="system\audio\XAudio2Stream.cpp" />
     <ClCompile Include="system\font\bmfont.cpp" />
     <ClCompile Include="system\graphics\fbo_modern.cpp">
