--- a/x64/Release/video.ini
+++ b/x64/Release/video.ini
@@ -380,10 +380,14 @@ bezcropy=
 overalpha=
 
 [bzone]
-fullsx=7
-fullsy=1020
-fullex=890
-fulley=-121
+;fullsx=7
+;fullsy=1020
+;fullex=890
+;fulley=-121
+fullsx=0
+fullsy=1024
+fullex=896    ;bottom
+fulley=-128      ;top
 bezelsx=199
 bezelsy=821
 bezelex=89
@@ -396,7 +400,6 @@ bezcropzoom=1.30
 bezcropx=-115
 bezcropy=-65
 overalpha=1.0
-
 
 [bradley]
 fullsx=7
@@ -1434,10 +1437,10 @@ bezcropy=-30
 overalpha=.96
 
 [invaders]
-fullsx=175
-fullsy=1224
-fullex=1150
-fulley=0
+fullsx=98
+fullsy=1075
+fullex=1142
+fulley=-25
 bezelsx=
 bezelsy=
 bezelex=
@@ -1452,10 +1455,10 @@ bezcropy=
 overalpha=
 
 [invaddlx]
-fullsx=175
-fullsy=1224
-fullex=1150
-fulley=0
+fullsx=98
+fullsy=1075
+fullex=1142
+fulley=-25
 bezelsx=
 bezelsy=
 bezelex=
@@ -1474,7 +1477,107 @@ overalpha=
 ;fullex=-55 ;bottom
 ;fulley=832 ; top
 
+[bzonea]
+fullsx=0
+fullsy=1024
+fullex=896    ;bottom
+fulley=-128      ;top
+bezelsx=199
+bezelsy=821
+bezelex=89
+bezeley=800
+cropsx=117
+cropsy=910
+cropex=39
+cropey=945
+bezcropzoom=1.30
+bezcropx=-115
+bezcropy=-65
+overalpha=1.0
+
+
 [rallyx]
+fullsx=10
+fullsy=1210
+fullex=-398
+fulley=765
+bezelsx=
+bezelsy=
+bezelex=
+bezeley=
+cropsx=
+cropsy=
+cropex=
+cropey=
+bezcropzoom=
+bezcropx=
+bezcropy=
+overalpha=
+
+;fullsx=20; left
+;fullsy=1000 ;right
+;fullex=-55 ;bottom
+;fulley=832 ; top
+
+
+[galaga]
+fullsx=225
+fullsy=1174
+
+;fullsx=10
+;fullsy=1024
+fullex=-140
+fulley=768
+bezelsx=
+bezelsy=
+bezelex=
+bezeley=
+cropsx=
+cropsy=
+cropex=
+cropey=
+bezcropzoom=
+bezcropx=
+bezcropy=
+overalpha=
+
+[pacman]
+fullsx=225
+fullsy=1174
+fullex=-140
+fulley=768
+bezelsx=
+bezelsy=
+bezelex=
+bezeley=
+cropsx=
+cropsy=
+cropex=
+cropey=
+bezcropzoom=
+bezcropx=
+bezcropy=
+overalpha=
+
+[mspacman]
+fullsx=225
+fullsy=1174
+fullex=-140
+fulley=768
+bezelsx=
+bezelsy=
+bezelex=
+bezeley=
+cropsx=
+cropsy=
+cropex=
+cropey=
+bezcropzoom=
+bezcropx=
+bezcropy=
+overalpha=
+
+[bosco]
 fullsx=10
 fullsy=1210
 fullex=-380
@@ -1487,6 +1590,60 @@ cropsx=
 cropsy=
 cropex=
 cropey=
+bezcropzoom=
+bezcropx=
+bezcropy=
+overalpha=
+
+[depthch]
+fullsx=5
+fullsy=1354
+fullex=-392
+fulley=765
+bezelsx=
+bezelsy=
+bezelex=
+bezeley=
+cropsx=
+cropsy=
+cropex=
+cropey=
+bezcropzoom=
+bezcropx=
+bezcropy=
+overalpha=
+
+[galaxian]
+fullsx=119
+fullsy=1078
+fullex=1087
+fulley=3
+bezelsx=0
+bezelsy=1024
+bezelex=1024
+bezeley=0
+cropsx=0
+cropsy=1024
+cropex=1024
+cropey=0
+bezcropzoom=
+bezcropx=
+bezcropy=
+overalpha=
+
+[warlords]
+fullsx=0
+fullsy=1363
+fullex=1040
+fulley=-49
+bezelsx=0
+bezelsy=1024
+bezelex=1024
+bezeley=0
+cropsx=0
+cropsy=1024
+cropex=1024
+cropey=0
 bezcropzoom=
 bezcropx=
 bezcropy=
